# gitlab-tui

./: .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml
src/gitlab_tui/: app.py  main.py  styles.tcss
src/gitlab_tui/api/: client.py
src/gitlab_tui/api/mock/: consts.py  mock_client.py
src/gitlab_tui/config/: __init__.py  config.py  config_reader.py  credentials_reader.py  defaults.py  git_context_resolver.py  manager.py
src/gitlab_tui/ui/: __init__.py
src/gitlab_tui/ui/components/: base_widget.py  pipeline_list_item.py  pipeline_main_view.py  pipeline_sidebar.py
src/gitlab_tui/utils/: exceptions.py  logger.py  parse_args.py
tests/config/: test_config.py  test_config_reader.py  test_credentials_reader.py  test_git_context_resolver.py
